# aoc23

./: .env.sample  Cargo.toml  README.md  justfile  shell.nix
src/: lib.rs  main.rs
